--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eureka-widget-property-markdown",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "A markdown widget for Eureka model's properties.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -35,9 +35,15 @@
     "glob": "^4.0.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "eureka-widget",
+    "eureka-widget-property",
+    "markdown"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "dependencies": {
+    "ember-cli-showdown": "^2.1.1"
   }
 }
