--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember test"
   },
-  "repository": "",
+  "repository": "http://github.com/namlook/eureka-widget-property-markdown",
   "engines": {
     "node": ">= 0.10.0"
   },
